--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Testing boi</title>
+	</head>
+	<body>
+		<h1>Here come dat boi</h1>
+		<h4 id='data'></h4>
+	</body>
+</html>
