--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<body>
 		<h1>Here come dat boi</h1>
 		<h4 id='data'></h4>
-		<script async src="./javascript.index.js"></script>
+		<script src="./javascript.index.js"></script>
 	</body>
 </html>
