--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Testing boi</title>
 	</head>
 	<body>
-		<h1>Here come dat boi</h1>
+		<h1>Here come dat boi2</h1>
 		<h4 id='data'></h4>
 		<script src="./javascript.index.js"></script>
 	</body>
